# StarTracker

./: LICENSE  README.md
webcam/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  binaryConvert.cpp~  cartesian.txt  client.cpp~  client.h  client.h~  cmake_install.cmake  disableAutofocus.sh  disableAutofocus.sh~  math3d.cpp  math3d.h  param.h~  process.cpp  process.cpp~  process.h  showWebCam.cpp~  starEntity.h  starfinder.cpp  starfinder.cpp~  starfinder.h  starfinder.h~  starter_video.cpp~  tAreaMoments.txt  tAreaMoments.txt~  triangle.cpp  triangle.h  triangle.h~  webcam
