cmake_minimum_required(VERSION 2.8)
project( cam )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( webcam process.cpp process.h math3d.h starfinder.h triangle.h starEntity.h param.h math3d.cpp starfinder.cpp triangle.cpp client.h client.cpp)
target_link_libraries( webcam ${OpenCV_LIBS} )
